--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,15 @@ body {
 }
 
 h1 {
+  font-size: 7em;
+}
+
+h2 {
   font-size: 5em;
+}
+
+h3 {
+  font-size: 4em;
 }
 
 #app {
@@ -17,4 +25,18 @@ h1 {
 .hud {
   float: right;
   margin: 1em 3em auto auto;
+}
+
+.title {
+  text-align: center;
+  margin-top: 2em;
+}
+
+.timeToStart {
+  position: fixed;
+  bottom: 1em;
+
+  /* To center align: https://stackoverflow.com/a/25919090/495611 */
+  left: 50%;
+  transform: translate(-50%, 0);
 }
