--- a/public/styles.css
+++ b/public/styles.css
@@ -22,6 +22,22 @@ h3 {
   overflow: hidden;
 }
 
+@keyframes fadeindanger {
+  from { opacity: 0; }
+  to { opacity: 0.35; }
+}
+
+.danger-mask {
+  /* Same size as #app */
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  z-index: 100;
+  background-color: red;
+  animation: 0.5s ease 0s infinite alternate none running fadeindanger;
+}
+
 .hud {
   float: right;
   margin: 1em 3em auto auto;
