--- a/public/styles.css
+++ b/public/styles.css
@@ -38,6 +38,10 @@ h3 {
   animation: 0.5s ease 0s infinite alternate none running fadeindanger;
 }
 
+.danger-mask[data-state="fatal"] {
+  animation-duration: 0.1s;
+}
+
 .hud {
   float: right;
   margin: 1em 3em auto auto;
