Standardize on serif font between OS X and Linux

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,7 @@
 body {
   color: white;
+  /* TODO(jeff): Arcade font: https://github.com/wearhere/spacecontrol/issues/62; */
+  font-family: serif;
 }
 
 h1 {
